--- a/style/hershey.css
+++ b/style/hershey.css
@@ -37,11 +37,6 @@ main {
 	position: relative;
 }
 
-section {
-	background-color: #f0e7da;
-	padding: 10px;
-}
-
 section h2 {
 	font-size: 2.5em;
 	color: #35000c;
@@ -125,12 +120,26 @@ main nav a:hover {
 }
 
 #holiday {
-	text-indent: -9999px;
 	background-image: url(../img/fall.jpg);
 	background-repeat: no-repeat;
 	width: 100%;
 	height: 400px;
 	margin: 10px 0 10px 0;
+	font-size: 2em;
+	font-family: 'Francois One', sans-serif;
+	position: relative;
+}
+
+#holiday a:link {
+	color: white;
+	padding: 10px;
+	position: absolute;
+	bottom: 10px;
+}
+
+#recipe {
+	background-color: #f0e7da;
+	padding: 10px;
 }
 
 #banner {
