--- a/style/hershey.css
+++ b/style/hershey.css
@@ -161,14 +161,13 @@ main nav a:hover {
 }
 
 #pumpkin {
-	text-indent: -9999px;
-	background-image: url(../img/pumpkin.png);
+	background-image: url();
 	background-repeat: no-repeat;
-	width: 354px;
-	height: 500px;
+	width: 85px;
+	height: 120px;
 	position: fixed;
 	top: 0px;
-	right: 20px;
+	right: 250px;
 	z-index: 3;
 }
 
